# agbot_arm

./: README.md  arm_tf2_view_frames.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arm_controller/share/arm_controller/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/arm_controller/share/arm_controller/config/: arm_controllers.yaml
install/arm_controller/share/arm_controller/launch/: controller.launch.py
install/arm_cpp/share/arm_cpp/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/arm_cpp/share/arm_cpp/cmake/: arm_cppConfig.cmake
install/arm_description/share/arm_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/arm_description/share/arm_description/cmake/: arm_descriptionConfig.cmake
install/arm_description/share/arm_description/launch/: arm_gazebo.launch.py
install/arm_description/share/arm_description/rviz/: arm_config.rviz
install/arm_description/share/arm_description/urdf/: arm.urdf  arm.xacro  arm_ros2_control.xacro
install/arm_moveit/share/arm_moveit/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/arm_moveit/share/arm_moveit/config/: agbot_arm.srdf  initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml
install/arm_moveit/share/arm_moveit/launch/: arm_moveit.launch.py  moveit.launch.py
install/arm_msgs/share/arm_msgs/: package.bash  package.zsh
install/arm_setup_moveit/share/ament_index/resource_index/package_run_dependencies/: arm_setup_moveit
install/arm_setup_moveit/share/ament_index/resource_index/parent_prefix_path/: arm_setup_moveit
install/arm_setup_moveit/share/arm_setup_moveit/: .setup_assistant  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/arm_setup_moveit/share/arm_setup_moveit/config/: agbot_arm.urdf.xacro  joint_limits.yaml  kinematics.yaml  ros2_controllers.yaml
install/arm_setup_moveit/share/arm_setup_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
log/: latest_build
src/arm_controller/: CMakeLists.txt  package.xml
src/arm_controller/config/: arm_controllers.yaml
src/arm_cpp/: CMakeLists.txt  package.xml
src/arm_cpp/src/: arm_moveit_interface.cpp  move_group_to_cartesian.cpp  old_arm_moveit_interface.cpp
src/arm_description/: CMakeLists.txt
src/arm_description/launch/: arm_display.launch.py  arm_gazebo.launch.py
src/arm_description/rviz/: arm_config.rviz
src/arm_description/urdf/: arm.urdf  arm.xacro  arm_gazebo.xacro  arm_ros2_control.xacro
src/arm_moveit/: CMakeLists.txt  package.xml
src/arm_moveit/config/: agbot_arm.srdf  kinematics.yaml  moveit_controllers.yaml
src/arm_moveit/launch/: arm_moveit.launch.py
src/arm_moveit/rviz/: move_group.rviz
src/arm_setup_moveit/: .setup_assistant  CMakeLists.txt  READ_ME arm_setup_moveit
src/arm_setup_moveit/config/: agbot_arm.ros2_control.xacro  agbot_arm.srdf  moveit_controllers.yaml
src/arm_setup_moveit/launch/: rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py
